k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cqa-svc
  namespace: shannon
spec:
  selector:
    app: cqa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
