k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cqa-ingress
  namespace: shannon
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - www.cqa.shannon.science
      secretName: cqa-tls
  rules:
    - host: www.cqa.shannon.science
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cqa-svc
                port:
                  number: 80
